# Soroban-Loyalty

./: .env.example  .gitignore  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  PR_DESCRIPTIONS.md  README.md  SECURITY.md  TODO.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  blue-green-deploy.yml  cd-staging.yml  changelog-check.yml  ci.yml  contracts-ci.yml  contracts-security.yml  frontend-ci.yml  rust-ci.yml
backend/: .eslintrc.json  VALIDATION_IMPLEMENTATION.md  eslint.config.cjs  jest.config.ts  package-lock.json  package.json
backend/migrations/: 1_initial_schema.js  2_add_reward_tx_hash_constraint.js
backend/src/: app.ts  auth.ts  db.ts  env.ts  index.ts  logger.ts
backend/src/__tests__/: auth.middleware.test.ts  campaign.pagination.test.ts  env.test.ts  indexer.test.ts  (+4 more)
benchmarks/: README.md
benchmarks/k6/: get-campaigns.js  run-get-campaigns.sh
benchmarks/reports/: .gitignore  get-campaigns-baseline.md
contracts/campaign/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/rewards/: Cargo.toml
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
database/: schema.sql
database/migrations/: 004_add_campaign_owner_address.sql
docs/: contracts.md  database.md  onboarding.md  structure.md
e2e/tests/: claim-reward-flow.spec.ts
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json
nginx/: Dockerfile  README.md  nginx.conf
scripts/: backup-db.sh  check-changelog.sh
src/: App.tsx
src/contexts/: ToastContext.tsx
(+83 files in other folders)
